# Virtual-Vending-Machine

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  OPERATOR_GUIDE.md  README.md  pyproject.toml  requirements.txt  virtual_vending_machine_docs.md
Schema/: README.md  cart-item.schema.json  inventory-item.schema.json  payment.schema.json  product.schema.json  schema-manifest.json  transaction.schema.json  vending-machine.schema.json
tests/: test_ansi_models.py  test_change.py  test_cli.py  test_cli_module.py  test_coverage_gaps.py  test_money.py  test_persistence_repositories.py  test_reports_renderers_simulation.py  test_state.py  test_state_cli_extra.py
vending/: __init__.py  __main__.py  ansi.py  change.py  cli.py  exceptions.py  models.py  money.py  persistence.py  renderers.py  reports.py  repositories.py  simulation.py  state.py
