[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "virtual-vending-machine"
version = "0.1.0"
description = "A state-driven virtual vending machine with Decimal money, change algorithms, persistence, reports, and simulation."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Virtual Vending Machine" }]
keywords = ["cli", "simulation", "vending", "decimal", "pytest"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "hypothesis>=6",
  "ruff>=0.4",
  "mypy>=1.9",
]

[project.scripts]
vending = "vending.cli:main"

[tool.setuptools.packages.find]
include = ["vending*"]

[tool.setuptools.package-data]
vending = ["data/*.json", "data/*.toml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
packages = ["vending"]
strict = true
warn_unused_ignores = false

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = [
  "--cov=vending",
  "--cov-report=term-missing",
  "--cov-fail-under=95",
]

[tool.coverage.run]
source = ["vending"]
omit = [
  "vending/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]
